Add and apply a color scheme
It's not perfect, but it looks okay

--- a/src/components/toggled-text/styles.scss
+++ b/src/components/toggled-text/styles.scss
@@ -1,5 +1,8 @@
+@import "../../vars.scss";
+
+
 .toggled-text {
-  background-color: lightgray;
+  background-color: $background-secondary;
 }
 
 .toggled-text.strike {
